@@ -1,191 +1,169 @@
 package org.example;
 
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Stack;
-
+import java.nio.file.Paths;
+import java.util.*;
 
 public class CowInterpreter {
-    private static final int MEMORY_SIZE = 30000;
-
-    private int[] memory;
+    private List<Integer> memory;
     private int pointer;
     private Integer register;
-    private InputStream input;
-    private OutputStream output;
-
-
-    public CowInterpreter(InputStream input, OutputStream output) {
-        this.memory = new int[MEMORY_SIZE];
-        this.pointer = 0;
-        this.register = null;
-        this.input = input;
-        this.output = output;
-    }
+    private List<String> instructions;
+    private Scanner scanner;
 
     public CowInterpreter() {
-        this(System.in, System.out);
+        this.memory = new ArrayList<>();
+        this.memory.add(0);
+        this.pointer = 0;
+        this.register = null;
+        this.instructions = new ArrayList<>();
+        this.scanner = new Scanner(System.in);
     }
 
-    public static String loadSource(Path path) throws IOException {
-        return Files.readString(path);
+    public void loadProgram(String filename) throws IOException {
+        String content = new String(Files.readAllBytes(Paths.get(filename)));
+        parseInstructions(content);
     }
 
-    public String[] parseTokens(String source) {
-        String cleaned = source.replaceAll("[^MmOo]", "");
-
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < cleaned.length(); i++) {
-            sb.append(cleaned.charAt(i));
-            if (sb.length() == 3) {
-                String token = sb.toString();
-                if (isValidToken(token)) {
-                    sb = new StringBuilder();
-                } else {
-                    sb.deleteCharAt(0);
+    private void parseInstructions(String content) {
+        instructions.clear();
+        int i = 0;
+        while (i < content.length()) {
+            if (i + 2 < content.length()) {
+                String candidate = content.substring(i, i + 3);
+                if (isValidInstruction(candidate)) {
+                    instructions.add(candidate);
+                    i += 3;
+                    continue;
                 }
             }
+            i++;
         }
-
-        StringBuilder tokens = new StringBuilder();
-        sb = new StringBuilder();
-        for (int i = 0; i < cleaned.length(); i++) {
-            sb.append(cleaned.charAt(i));
-            if (sb.length() == 3) {
-                String token = sb.toString();
-                if (isValidToken(token)) {
-                    tokens.append(token).append(" ");
-                    sb = new StringBuilder();
-                } else {
-                    sb.deleteCharAt(0);
-                }
-            }
-        }
-
-        String result = tokens.toString().trim();
-        return result.isEmpty() ? new String[0] : result.split(" ");
     }
 
-    private boolean isValidToken(String token) {
-        return token.equals("MoO") || token.equals("MOo") || token.equals("moO") ||
-                token.equals("mOo") || token.equals("moo") || token.equals("MOO") ||
-                token.equals("OOM") || token.equals("oom") || token.equals("mOO") ||
-                token.equals("Moo") || token.equals("OOO") || token.equals("MMM");
+    private boolean isValidInstruction(String s) {
+        return s.equals("MoO") || s.equals("MOo") || s.equals("moO") ||
+               s.equals("mOo") || s.equals("moo") || s.equals("MOO") ||
+               s.equals("OOM") || s.equals("oom") || s.equals("mOO") ||
+               s.equals("Moo") || s.equals("OOO") || s.equals("MMM");
     }
 
-    public Map<Integer, Integer> buildLoopMap(String[] tokens) {
-        Map<Integer, Integer> loops = new HashMap<>();
-        Stack<Integer> stack = new Stack<>();
-
-        for (int i = 0; i < tokens.length; i++) {
-            if (tokens[i].equals("MOO")) {
-                stack.push(i);
-            } else if (tokens[i].equals("moo")) {
-                if (!stack.isEmpty()) {
-                    int start = stack.pop();
-                    loops.put(start, i);
-                    loops.put(i, start);
-                }
-            }
-        }
-
-        return loops;
-    }
-
-    public void execute(String source) throws IOException {
-        String[] tokens = parseTokens(source);
-        Map<Integer, Integer> loops = buildLoopMap(tokens);
+    public void execute() {
+        memory.clear();
+        memory.add(0);
+        pointer = 0;
+        register = null;
 
         int pc = 0;
 
-        while (pc < tokens.length) {
-            String token = tokens[pc];
+        while (pc < instructions.size()) {
+            String instr = instructions.get(pc);
 
-            switch (token) {
+            switch (instr) {
                 case "MoO":
-                    memory[pointer]++;
+                    ensureMemorySize();
+                    memory.set(pointer, memory.get(pointer) + 1);
                     break;
 
                 case "MOo":
-                    memory[pointer]--;
+                    ensureMemorySize();
+                    memory.set(pointer, memory.get(pointer) - 1);
                     break;
 
                 case "moO":
                     pointer++;
-                    if (pointer >= MEMORY_SIZE) {
-                        pointer = 0;
-                    }
+                    ensureMemorySize();
                     break;
 
                 case "mOo":
-                    pointer--;
-                    if (pointer < 0) {
-                        pointer = MEMORY_SIZE - 1;
+                    if (pointer > 0) {
+                        pointer--;
                     }
                     break;
 
                 case "MOO":
-                    if (memory[pointer] == 0) {
-                        Integer target = loops.get(pc);
-                        if (target != null) {
-                            pc = target;
+                    ensureMemorySize();
+                    if (memory.get(pointer) == 0) {
+                        int depth = 1;
+                        int searchPc = pc + 1;
+                        while (searchPc < instructions.size() && depth > 0) {
+                            if (instructions.get(searchPc).equals("MOO")) {
+                                depth++;
+                            } else if (instructions.get(searchPc).equals("moo")) {
+                                depth--;
+                            }
+                            searchPc++;
                         }
+                        pc = searchPc - 1;
                     }
                     break;
 
                 case "moo":
-                    Integer target = loops.get(pc);
-                    if (target != null) {
-                        pc = target - 1;
+                    int depth = 1;
+                    int searchPc = pc - 1;
+                    while (searchPc >= 0 && depth > 0) {
+                        if (instructions.get(searchPc).equals("moo")) {
+                            depth++;
+                        } else if (instructions.get(searchPc).equals("MOO")) {
+                            depth--;
+                        }
+                        searchPc--;
                     }
+                    pc = searchPc;
                     break;
 
                 case "OOM":
-                    String numStr = String.valueOf(memory[pointer]);
-                    output.write(numStr.getBytes());
-                    output.flush();
+                    ensureMemorySize();
+                    System.out.print(memory.get(pointer));
                     break;
 
                 case "oom":
-                    int value = input.read();
-                    if (value != -1) {
-                        memory[pointer] = value;
+                    ensureMemorySize();
+                    try {
+                        if (scanner.hasNextInt()) {
+                            memory.set(pointer, scanner.nextInt());
+                        } else {
+                            memory.set(pointer, 0);
+                        }
+                    } catch (Exception e) {
+                        memory.set(pointer, 0);
                     }
                     break;
 
                 case "mOO":
-                    int targetPc = memory[pointer];
-                    if (targetPc >= 0 && targetPc < tokens.length) {
-                        pc = targetPc - 1;
+                    ensureMemorySize();
+                    int targetIndex = memory.get(pointer);
+                    if (targetIndex >= 0 && targetIndex < instructions.size()) {
+                        executeInstruction(instructions.get(targetIndex));
                     }
                     break;
 
                 case "Moo":
-                    if (memory[pointer] == 0) {
-                        int inputValue = input.read();
-                        if (inputValue != -1) {
-                            memory[pointer] = inputValue;
+                    ensureMemorySize();
+                    if (memory.get(pointer) == 0) {
+                        try {
+                            int input = System.in.read();
+                            memory.set(pointer, input);
+                        } catch (IOException e) {
+                            memory.set(pointer, 0);
                         }
                     } else {
-                        output.write(memory[pointer]);
-                        output.flush();
+                        System.out.print((char) (int) memory.get(pointer));
                     }
                     break;
 
                 case "OOO":
-                    memory[pointer] = 0;
+                    ensureMemorySize();
+                    memory.set(pointer, 0);
                     break;
 
                 case "MMM":
+                    ensureMemorySize();
                     if (register == null) {
-                        register = memory[pointer];
+                        register = memory.get(pointer);
                     } else {
-                        memory[pointer] = register;
+                        memory.set(pointer, register);
                         register = null;
                     }
                     break;
@@ -195,36 +173,77 @@ public class CowInterpreter {
         }
     }
 
-    public void executeFromFile(Path path) throws IOException {
-        String source = loadSource(path);
-        execute(source);
-    }
-
-    public int[] getMemory() {
-        return memory.clone();
-    }
-
-    public int getPointer() {
-        return pointer;
-    }
-
-    public Integer getRegister() {
-        return register;
-    }
-
-    public void setMemoryCell(int index, int value) {
-        if (index >= 0 && index < MEMORY_SIZE) {
-            memory[index] = value;
+    private void executeInstruction(String instr) {
+        switch (instr) {
+            case "MoO":
+                ensureMemorySize();
+                memory.set(pointer, memory.get(pointer) + 1);
+                break;
+            case "MOo":
+                ensureMemorySize();
+                memory.set(pointer, memory.get(pointer) - 1);
+                break;
+            case "moO":
+                pointer++;
+                ensureMemorySize();
+                break;
+            case "mOo":
+                if (pointer > 0) {
+                    pointer--;
+                }
+                break;
+            case "OOM":
+                ensureMemorySize();
+                System.out.print(memory.get(pointer));
+                break;
+            case "oom":
+                ensureMemorySize();
+                try {
+                    if (scanner.hasNextInt()) {
+                        memory.set(pointer, scanner.nextInt());
+                    } else {
+                        memory.set(pointer, 0);
+                    }
+                } catch (Exception e) {
+                    memory.set(pointer, 0);
+                }
+                break;
+            case "Moo":
+                ensureMemorySize();
+                if (memory.get(pointer) == 0) {
+                    try {
+                        int input = System.in.read();
+                        memory.set(pointer, input);
+                    } catch (IOException e) {
+                        memory.set(pointer, 0);
+                    }
+                } else {
+                    System.out.print((char) (int) memory.get(pointer));
+                }
+                break;
+            case "OOO":
+                ensureMemorySize();
+                memory.set(pointer, 0);
+                break;
+            case "MMM":
+                ensureMemorySize();
+                if (register == null) {
+                    register = memory.get(pointer);
+                } else {
+                    memory.set(pointer, register);
+                    register = null;
+                }
+                break;
         }
     }
 
-    public void setPointer(int pointer) {
-        this.pointer = pointer;
+    private void ensureMemorySize() {
+        while (pointer >= memory.size()) {
+            memory.add(0);
+        }
     }
 
-    public void reset() {
-        this.memory = new int[MEMORY_SIZE];
-        this.pointer = 0;
-        this.register = null;
+    public void close() {
+        scanner.close();
     }
 }
